--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.upc.citm.android.speakerfeedback">
+
     <application
-        android:name="edu.upc.citm.android.speakerfeedback.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:launchMode="singleTask">
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterUserActivity"></activity>
-        <service android:name=".FirestoreServiceListener"/>
+        <activity android:name=".RegisterUserActivity" />
+
+        <service android:name=".FirestoreServiceListener" />
+
+        <activity android:name=".UserListActivity" />
+        <activity android:name=".UserInRoomActivity"></activity>
     </application>
+
 </manifest>
